--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ pytest-cov = "^5.0.0"
 sphinx = "^8.0.2"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
