--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,19 +7,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.12'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         poetry install
+
     - name: Run tests
       run: |
         poetry run pytest --cov=src
+
     - name: Check PEP 8 compliance
       run: |
         poetry run black --check src
+
+    - name: Check for type errors
+      run: |
+        poetry run mypy src
+
+    - name: Lint with flake8
+      run: |
+        poetry run flake8 src
