--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sphinx = "^8.0.2"
 black = "^24.8.0"
 mypy = "^1.11.2"
 pandas-stubs = "^2.2.2.240909"
+flake8 = "^7.1.1"
 
 [build-system]
 requires = ["poetry-core"]
