--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,33 @@
 [tool.poetry]
-name = "demo-projet"
+name = "bgdia700"
 version = "0.1.0"
-description = "A demo project"
-authors = ["DE GIETER Hugo <hugo.degieter@telecom-paris.fr>"]
+description = "Webapp streamlit d'analyse de données"
+authors = ["lolomasterIA <laury.magne@gmail.com>"]
 readme = "README.md"
-packages = [{include = "src"}]
-
+packages = [
+    { include = "src", from = "." }
+]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.11"
 pandas = "^2.2.3"
-plotly = "^5.24.1"
-streamlit = "^1.39.0"
+python-dotenv = "^1.0.1"
 pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
-sphinx = "^8.0.2"
-
+psycopg2-binary = "^2.9.10"
+sqlalchemy = "^2.0.36"
+streamlit = "^1.39.0"
+plotly = "^5.24.1"
 
 [tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
-mypy = "^1.11.2"
-pandas-stubs = "^2.2.2.240909"
+pytest-cov = "^5.0.0"
+black = "^24.10.0"
+pydocstyle = "^6.3.0"
 flake8 = "^7.1.1"
+pre-commit = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.bandit]
+exclude_dirs = ["tests"]
