blank.yaml change for master branch

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,11 +5,11 @@
   on:
     push:
       branches:
-        - main
+        - master
         - Hugo
     pull_request:
       branches:
-        - main
+        - master
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
