--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ sqlalchemy = "^2.0.36"
 streamlit = "^1.39.0"
 plotly = "^5.24.1"
 matplotlib = "^3.7.1"
+seaborn = "^0.11.2"
+scikit-learn = "^1.0.2"
+scipy = "^1.7.3"
+numpy = "^1.22.0"
+joblib = "^1.1.0"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest-cov = "^5.0.0"
